Correct alignment of project gallery on sector page.

--- a/_src/css/components/list-project.css
+++ b/_src/css/components/list-project.css
@@ -3,7 +3,7 @@
 .project-listing {
   --sidebar-gutter: calc( ( var(--space-m) * 2 ) - var(--space-3xs) );
   --sidebar-target-width: 45rem;
-  --sidebar-content-min-width: 35%;
+  --sidebar-content-min-width: 50%;
   margin-block-end: var(--space-m);
 
   &.hatching {
